argocd/objects/gateway-api/objects.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: gateway

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: '*.<path:cluster-secrets:cluster-secrets#domain>'
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-<path:cluster-secrets:cluster-secrets#domain>
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: '<path:cluster-secrets:cluster-secrets#domain>'
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-<path:cluster-secrets:cluster-secrets#domain>
      allowedRoutes:
        namespaces:
          from: All
