argocd/objects/gateway-api/httproute-argocd copy.yaml

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  hostnames:
    - argocd-k8s.<path:cluster-secrets:cluster-secrets#domain>
  parentRefs:
  - name: argocd-gateway
    namespace: argocd
  rules:
    - matches:
      backendRefs:
        - name: argocd-server
          port: 80
