argocd/objects/gateway-api/httproute-uptime-kuma.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: uptime-kuma-route
  namespace: uptime-kuma
spec:
  hostnames:
    - uptime-kuma-k8s.<path:cluster-secrets:cluster-secrets#domain>
  parentRefs:
  - name: internal
    namespace: gateway
  rules:
  - backendRefs:
    - name: uptime-kuma
      port: 3001
